FIX: tweaking blurry images on chrome

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -30,6 +30,9 @@ blockquote {
 }
 img {
     max-width: 100%;
+    // image-rendering: auto;
+    image-rendering: crisp-edges;
+    // image-rendering: pixelated;
 }
 table {
     margin: 0 auto 25px;
